fix(ui): export missing route fields and persist tracking-mode on new routes (#317)
## Summary

Two related defects in `rest-endpoint-config.js` dropped route fields
from the property export and reset the tracking-mode dropdown on new
routes:

- **`buildRouteExportLines`** never emitted `required-roles`,
`required-scopes`, or `max-request-size`, even though they were stored
on `row._routeProps` and sent to NiFi.
- **`addRowToTable`** (used when creating a new route) omitted
`tracking-mode` and `attachments-*` from the props object — export
lacked those lines and reopening the editor showed
`tracking-mode="none"`.

## Changes

- `rest-endpoint-config.js:1618-1623`: emit the three missing fields in
`buildRouteExportLines` when non-empty.
- `rest-endpoint-config.js:1907-1922`: copy `tracking-mode` and
`attachments-*` into props inside `addRowToTable`.
- Added 7 tests (TDD red → green) in `rest-endpoint-config.test.js`.
- Separate commit: OpenRewrite auto-cleanup applied by the pre-commit
profile (`Collections.emptyX` → `X.of()`, star-import expansion).

## Test plan

- [x] New tests for all 3 missing export fields + empty-omission case (4
tests)
- [x] New tests for new-route tracking-mode export line + dropdown
re-display + attachments bounds (3 tests)
- [x] Full `rest-endpoint-config` Jest suite passes (143 tests)
- [x] `./mvnw -Ppre-commit clean install -DskipTests` passes
- [x] `./mvnw clean install -pl nifi-cuioss-ui -am` passes

---------

Co-authored-by: Oliver Wolff <23139298+cuioss@users.noreply.github.com>
Co-authored-by: Claude <noreply@anthropic.com>